# airgradientz

./: .gitattributes  .gitignore  .gitmodules  README.md  airgradientz.json  build.sh  lint.sh  queries.sql  schema.sql  start.sh  test-fixtures.json  test-spec.json  test.sh
.github/workflows/: conformance.yml  lint.yml  test.yml
asm/: Makefile  build.sh  start.sh
asm/src/: api.asm  config.asm  db.asm  http_client.asm  main.asm  poller.asm  router.asm  server.asm  static.asm  strings.asm  url.asm
asm/tests/: run_tests.sh
bash/: build.sh  handler.sh  server.sh  start.sh
bash/lib/: config.sh  db.sh  http.sh  poller.sh
bash/tests/: run_tests.sh
bench/: run.sh
c/: Makefile  build.sh  test_runner
c/public/: app.js  index.html  style.css
c/src/: api.c  api.h  app.h  (+16 more)
conformance/: compare.sh  mock-device.sh  run.sh  runner.sh
d/: activate-toolchain.sh  build.sh  dub.json  setup.sh  start.sh
docs/: api-spec.md  polling-spec.md
elixir/: .credo.exs  build.sh  mix.exs  start.sh
forth/: build.sh  public  start.sh
go/: .golangci.yml  build.sh  config.go  config_test.go  db.go  db_test.go  go.mod  main.go  poller.go  server.go  server_test.go  spec_test.go
haskell/: airgradientz.cabal  build.sh  start.sh
haskell/src/: Config.hs  DB.hs  Json.hs  Log.hs  Main.hs  Poller.hs  Server.hs
haskell/test/: Spec.hs
nim/: build.sh  nim.cfg  start.sh
nodejs/: build.sh  config.js  eslint.config.mjs  package-lock.json  package.json  server.js  setup-fnm.sh  start.sh
rust/: Cargo.toml  build.sh  start.sh
zig/: build.sh  build.zig  build.zig.zon  start.sh
(+65 files in other folders)
